# fhcpr.org

./: .gitignore  Cargo.toml  LICENSE  README.md  Trunk.toml  check_structure.sh  fhcpr-535cae5c32d5fb8a.js  fhcpr-535cae5c32d5fb8a_bg.wasm  fhcpr-89339426b3e78050_bg.wasm  fhcpr-9e69b69678ea8907.js  fhcpr-9e69b69678ea8907_bg.wasm  fhcpr-a8339fd1c6b642fc_bg.wasm  fhcpr-c6247b8612b2f4df_bg.wasm  fhcpr-d2c7ee59c2eb6071.js  fhcpr-d2c7ee59c2eb6071_bg.wasm  fhcpr-d78e9940f781d1ec.js  fhcpr-d78e9940f781d1ec_bg.wasm  fhcpr-e997559dfe059f94_bg.wasm  index.html  styles-18cbe6b2a493a3f1.css  styles-2d45636a07acfd8d.css  styles-516090bbca346994.css  styles-52d09c957603b469.css  styles-6b2487d2af890a41.css  styles-74ccbe0669b6141e.css
.github/workflows/: deploy.yml
src/: app.rs  main.rs
src/components/: about.rs  carousel.rs  footer.rs  medicare_ratings.rs  mod.rs  navbar.rs  requirements.rs  services.rs
src/pages/: home.rs
static/: CNAME  robots.txt  sitemap.xml  styles.css
